Update FORM_ENDPOINT to use HTTPS

--- a/applicationsgi.html
+++ b/applicationsgi.html
@@ -115,7 +115,7 @@
 </section>
 
 <script>
-  const FORM_ENDPOINT = "http://sgi-app-worker.fasuuruate.workers.dev"; // <-- replace after Step 2
+  const FORM_ENDPOINT = "https://sgi-app-worker.fasuuruate.workers.dev"; // <-- replace after Step 2
   const form = document.getElementById('sgi-app');
   const statusEl = document.getElementById('sgi-status');
 
