Update Enroll Now link to new application path

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
           <div class="kpi"><div style="font-weight:800;font-size:20px">Iyawos Only</div><div class="muted">256 Odu orientation</div></div>
         </div>
         <div class="foot">
-          <a class="btn" href="applicationsgi.html">Enroll Now</a>
+          <a class="btn" href="/swamig-application">Enroll Now</a>
           <a class="btn alt" href="obiorisha.pdf" download>Pre-Divination Review Lesson 0.2 Pdf</a>
           <a class="btn alt" href="orishapele.ppt" download>Download: Orisha Pele Power Power Slides</a>
         </div>
