Update Enroll link to Apply link with URL

--- a/index.html
+++ b/index.html
@@ -60,8 +60,7 @@
         <a class="btn alt" href="#modules">Modules</a>
         <a class="btn alt" href="#syllabus">Syllabus</a>
         <a class="btn alt" href="#faq">FAQ</a>
-        <a class="btn" href="applicationsgi.html">Enroll</a>
-      </nav>
+        <a class="btn" href="https://docs.google.com/forms/d/e/1FAIpQLScz4rQ5augcbNsaP7xyIJmXsOK28GQINZnVW4nlhASmb-y7Vw/viewform?usp=header>Apply</A>
     </header>
 
     <section class="hero" id="top">
